unpackaged/main/default/objects/SBQQ__Quote__c/fields/Account_Plan_Prolifiq__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Prolifiq__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Prolifiq</label>
    <referenceTo>pqcrush__Account_Plan__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>