unpackaged/main/default/objects/SBQQ__Quote__c/fields/Additional_Miscellaneous_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Miscellaneous_Terms__c</fullName>
    <label>Additional Miscellaneous Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>