unpackaged/main/default/objects/SBQQ__Quote__c/fields/AFC_Freight_Override__c.field-meta.xml
<CustomField>
    <fullName>AFC_Freight_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFC Freight Override</label>
    <type>Checkbox</type>
</CustomField>