unpackaged/main/default/objects/SBQQ__Quote__c/fields/AFC_Special_Make__c.field-meta.xml
<CustomField>
    <fullName>AFC_Special_Make__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFC Special Make</label>
    <type>Checkbox</type>
</CustomField>