unpackaged/main/default/objects/SBQQ__Quote__c/fields/AFC_Special_Make_Min_Length_ft__c.field-meta.xml
<CustomField>
    <fullName>AFC_Special_Make_Min_Length_ft__c</fullName>
    <label>AFC Special Make Min Length (ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>