unpackaged/main/default/objects/SBQQ__Quote__c/fields/AFC_Special_Make_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>AFC_Special_Make_Tolerance__c</fullName>
    <label>AFC Special Make Tolerance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>