unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Agency)</relationshipLabel>
    <relationshipName>Quotes_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>