unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agency_Rep_d_Products__c.field-meta.xml
<CustomField>
    <fullName>Agency_Rep_d_Products__c</fullName>
    <label>Agency Rep&#39;d Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>ALFITT</fullName>
            </value>
            <value>
                <fullName>CABLEMANAGE</fullName>
                <isActive>false</isActive>
                <label>CABLEMANAGE</label>
            </value>
            <value>
                <fullName>COPE</fullName>
                <label>CABLEMANAGE</label>
            </value>
            <value>
                <fullName>Co-Load</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>ECN</fullName>
            </value>
            <value>
                <fullName>FRE</fullName>
            </value>
            <value>
                <fullName>MTLFRM</fullName>
            </value>
            <value>
                <fullName>PVCCON</fullName>
            </value>
            <value>
                <fullName>PVCFIT</fullName>
            </value>
            <value>
                <fullName>PVCWPIPE</fullName>
            </value>
            <value>
                <fullName>STEELCON</fullName>
            </value>
            <value>
                <fullName>USTRAY</fullName>
                <isActive>false</isActive>
                <label>USTRAY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>