unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agent_Commission_ATC__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_ATC__c</fullName>
    <label>Agent Commission, ATC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>