unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agent_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Contact_Name__c</fullName>
    <formula>SBQQ__Opportunity2__r.Agent_Contact__r.FirstName + &quot; &quot; + SBQQ__Opportunity2__r.Agent_Contact__r.LastName</formula>
    <label>Agent Contact Name</label>
    <type>Text</type>
</CustomField>