unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agent_Pricing_Justification__c.field-meta.xml
<CustomField>
    <fullName>Agent_Pricing_Justification__c</fullName>
    <inlineHelpText>Pricing justification entered by Agent when quote was submitted for review.</inlineHelpText>
    <label>Agent Pricing Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>