unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agent_Sales_Commission_ATC__c.field-meta.xml
<CustomField>
    <fullName>Agent_Sales_Commission_ATC__c</fullName>
    <label>Agent Sales Commission (ATC)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>