unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agent_Sales_Commissions_Alum_Cond_Fitt__c.field-meta.xml
<CustomField>
    <fullName>Agent_Sales_Commissions_Alum_Cond_Fitt__c</fullName>
    <label>Agent Sales Commissions (Alum Cond&amp;Fitt)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>