unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agent_Sales_Commissions_ECN__c.field-meta.xml
<CustomField>
    <fullName>Agent_Sales_Commissions_ECN__c</fullName>
    <label>Agent Sales Commissions (ECN)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>