unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agent_Whse_Commissions_FRE__c.field-meta.xml
<CustomField>
    <fullName>Agent_Whse_Commissions_FRE__c</fullName>
    <label>Agent Whse Commissions (FRE)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>