unpackaged/main/default/objects/SBQQ__Quote__c/fields/Apply_Freight_Adder_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Apply_Freight_Adder_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Freight Adder Adjustment</label>
    <type>Checkbox</type>
</CustomField>