unpackaged/main/default/objects/SBQQ__Quote__c/fields/Apply_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Apply_Multiplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Multiplier</label>
    <type>Checkbox</type>
</CustomField>