unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Approval_Finalized__c</fullName>
    <inlineHelpText>Stamp when the quote was approved or rejected</inlineHelpText>
    <label>Approval Finalized</label>
    <type>DateTime</type>
</CustomField>