unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Finalized_GMT__c.field-meta.xml
<CustomField>
    <fullName>Approval_Finalized_GMT__c</fullName>
    <formula>DATETIMEVALUE( Approval_Finalized__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Finalized GMT</label>
    <type>DateTime</type>
</CustomField>