unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitted__c</fullName>
    <inlineHelpText>Stamp when the quote&#39;s approval was submitted</inlineHelpText>
    <label>Approval Submitted</label>
    <type>DateTime</type>
</CustomField>