unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Submitted_GMT__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitted_GMT__c</fullName>
    <formula>DATETIMEVALUE( Approval_Submitted__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Submitted GMT</label>
    <type>DateTime</type>
</CustomField>