unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Turnaround_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Approval_Turnaround_Hrs__c</fullName>
    <description>Calculate business hours for approval to complete (fx is using 8hr workday from 9-5 PDT)</description>
    <formula>ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE( Approval_Finalized__c  ) - DATE( 1900, 1, 8) ) /
7) +
MIN(5,
MOD( DATEVALUE( Approval_Finalized__c  ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD( Approval_Finalized__c  - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( Approval_Submitted__c ) - DATE( 1900, 1, 8) ) /
7) +
MIN( 5,
MOD( DATEVALUE( Approval_Submitted__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( Approval_Submitted__c - DATETIMEVALUE( &#39;1900-01-08 16:00:00&#39; ), 1) ) )
)
)
),
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Turnaround (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>