unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Turnaround_Time__c</fullName>
    <inlineHelpText>Calculate the turnaround time for the quote to get approved/rejected</inlineHelpText>
    <label>Approval Turnaround Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>