unpackaged/main/default/objects/SBQQ__Quote__c/fields/ASP_PPC_Fittings__c.field-meta.xml
<CustomField>
    <fullName>ASP_PPC_Fittings__c</fullName>
    <description>IF(Total_Weight_PPC_Fittings__c &lt; 0.001, 0, Gross_Invoice_PPC_Fittings__c / Total_Weight_PPC_Fittings__c)</description>
    <formula>IF(Total_Weight_PVC_Fittings__c &lt; 0.001, 0, Gross_Invoice_PVC_Fittings__c / Total_Weight_PVC_Fittings__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF(Total_Weight_PPC_Fittings__c &lt; 0.001, 0, Gross_Invoice_PPC_Fittings__c / Total_Weight_PPC_Fittings__c)</inlineHelpText>
    <label>ASP PVC Fittings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>