unpackaged/main/default/objects/SBQQ__Quote__c/fields/ASP_PVC_Conduit__c.field-meta.xml
<CustomField>
    <fullName>ASP_PVC_Conduit__c</fullName>
    <formula>IF( Total_Weight_PVC_Conduit__c  &lt; 0.001, 0,  Gross_Invoice_PVC_Conduit__c  / Total_Weight_PVC_Conduit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASP PVC Conduit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>