unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Cash_Discount_Override__c.field-meta.xml
<CustomField>
    <fullName>ATC_Cash_Discount_Override__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ATC Cash Discount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>