unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Escalators__c.field-meta.xml
<CustomField>
    <fullName>ATC_Escalators__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATC Escalators</label>
    <type>Checkbox</type>
</CustomField>