unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Escalators_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ATC_Escalators_Frequency__c</fullName>
    <label>ATC Escalators Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>