unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Escalators_Increment__c.field-meta.xml
<CustomField>
    <fullName>ATC_Escalators_Increment__c</fullName>
    <label>ATC Escalators Increment</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>