unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Escalators_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ATC_Escalators_Start_Date__c</fullName>
    <label>ATC Escalators Start Date</label>
    <type>Date</type>
</CustomField>