unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Freight_Override__c.field-meta.xml
<CustomField>
    <fullName>ATC_Freight_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATC Freight Override</label>
    <type>Checkbox</type>
</CustomField>