unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Logo__c.field-meta.xml
<CustomField>
    <fullName>ATC_Logo__c</fullName>
    <formula>IMAGE(&#39;https://atkore--uat--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0687d000001Qqci&amp;operationContext=CHATTER&amp;contentId=05T7d0000041KCK&#39;,&#39;AFC&#39;,100,125)</formula>
    <label>ATC Logo</label>
    <type>Text</type>
</CustomField>