unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Margin__c.field-meta.xml
<CustomField>
    <fullName>ATC_Margin__c</fullName>
    <description>IF( Gross_Invoice_ATC__c =0,0,( Gross_Invoice_ATC__c - Current_Cost_ATC__c - Freight_Sub_Total_ATC__c - Agent_Commission_ATC__c - SGA_ATC__c) / Gross_Invoice_ATC__c)</description>
    <formula>IF( Gross_Invoice_ATC__c =0,0,( Gross_Invoice_ATC__c - Current_Cost_ATC__c - Freight_Sub_Total_ATC__c - Agent_Commission_ATC__c - SGA_ATC__c) / Gross_Invoice_ATC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF( Gross_Invoice_ATC__c =0,0,( Gross_Invoice_ATC__c - Current_Cost_ATC__c - Freight_Sub_Total_ATC__c - Agent_Commission_ATC__c - SGA_ATC__c) / Gross_Invoice_ATC__c)</inlineHelpText>
    <label>ATC Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>