unpackaged/main/default/objects/SBQQ__Quote__c/fields/ATC_Rebate_Override__c.field-meta.xml
<CustomField>
    <fullName>ATC_Rebate_Override__c</fullName>
    <label>ATC Rebate Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>