unpackaged/main/default/objects/SBQQ__Quote__c/fields/Availability_and_Leadtime__c.field-meta.xml
<CustomField>
    <fullName>Availability_and_Leadtime__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Availability and leadtime to be determined based on the needs of the project.</inlineHelpText>
    <label>Availability and Leadtime</label>
    <type>Checkbox</type>
</CustomField>