unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bid_or_Buy__c.field-meta.xml
<CustomField>
    <fullName>Bid_or_Buy__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Bid_or_Buy_Picklist__c )</formula>
    <inlineHelpText>This value is set on the Opportunity and cannot be changed here.</inlineHelpText>
    <label>Bid or Buy</label>
    <type>Text</type>
</CustomField>