unpackaged/main/default/objects/SBQQ__Quote__c/fields/Brand_Cloud_For_Template__c.field-meta.xml
<CustomField>
    <fullName>Brand_Cloud_For_Template__c</fullName>
    <formula>LEFT(
  Brand_Cloud__c,
  LEN(Brand_Cloud__c)- 2
)</formula>
    <label>Brand Cloud For Template</label>
    <type>Text</type>
</CustomField>