unpackaged/main/default/objects/SBQQ__Quote__c/fields/Brand_Logo__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo__c</fullName>
    <label>Branding Logo</label>
    <type>Url</type>
</CustomField>