unpackaged/main/default/objects/SBQQ__Quote__c/fields/Brand_Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo_Image__c</fullName>
    <formula>IMAGE(IF(TEXT($User.UserType) = &quot;PowerPartner&quot;, &quot;/Agents&quot;, &quot;&quot;) + Brand_Logo__c, &quot;Atkore International&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Logo Image</label>
    <type>Text</type>
</CustomField>