unpackaged/main/default/objects/SBQQ__Quote__c/fields/Branding_Logo_Selector__c.field-meta.xml
<CustomField>
    <fullName>Branding_Logo_Selector__c</fullName>
    <description>Select the appropriate logo image for this quote</description>
    <inlineHelpText>Select the appropriate logo image for this quote</inlineHelpText>
    <label>Branding Logo Selector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allied</fullName>
            </value>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>Cope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>