unpackaged/main/default/objects/SBQQ__Quote__c/fields/Business_Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Count__c</fullName>
    <formula>MIN( 1  ,  Count_CRC_Quote_Lines__c  )
  +
   MIN( 1  ,  Count_ALFITT_Quote_Lines__c  )
  +
   MIN( 1  ,  Count_ECN_Quote_Lines__c + Count_Steel_Conduit_Quote_Lines__c  )
  +
   MIN( 1  ,  Count_AFC_Quote_Lines__c  )
  +
   MIN( 1  ,  Count_Metal_Framing_Quote_Lines__c  )
  +
   MIN( 1  ,  Count_PVCCON_Quote_Lines__c + Count_PVCFIT_Quote_Lines__c + Count_PVCWPIPE_Quote_Lines__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>