unpackaged/main/default/objects/SBQQ__Quote__c/fields/business_unit_long__c.field-meta.xml
<CustomField>
    <fullName>business_unit_long__c</fullName>
    <description>Business Units based on Product category on quote</description>
    <formula>IF (
	Count_CRC_Quote_Lines__c &gt; 0,
	 &quot;Aluminum Conduit Fittings, &quot;,
	 &quot;&quot;
)&amp;
IF (
	Count_AFC_Quote_Lines__c &gt; 0,
	 &quot;ECFC, &quot;,
	 &quot;&quot;
)&amp;
IF (
        Count_ALFITT_Quote_Lines__c &gt; 0,
	 &quot;Conduit and Cable Fittings, &quot;,
	 &quot;&quot;
)&amp;
IF (
	Count_ECN_Quote_Lines__c &gt; 0,
	 &quot;ECN, &quot;,
	 &quot;&quot;
)&amp;
IF (
	Count_Metal_Framing_Quote_Lines__c &gt; 0,
	 &quot;Metal Framing, &quot;,
	 &quot;&quot;
)&amp;
IF (
	Count_PVCCON_Quote_Lines__c &gt; 0,
	 &quot;PVC Conduit, &quot;,
	 &quot;&quot;
)&amp;
IF (
	Count_PVCFIT_Quote_Lines__c	 &gt; 0,
	 &quot;PVC Fittings, &quot;,
	 &quot;&quot;
)&amp;
IF (
	Count_PVCWPIPE_Quote_Lines__c &gt; 0,
	 &quot;PVC Water Pipe, &quot;,
	 &quot;&quot;
)&amp;
IF (
	Count_Steel_Conduit_Quote_Lines__c &gt; 0,
	 &quot;Steel Conduit, &quot;,
	 &quot;&quot;
)</formula>
    <label>Business Unit (Long)</label>
    <type>Text</type>
</CustomField>