unpackaged/main/default/objects/SBQQ__Quote__c/fields/business_units__c.field-meta.xml
<CustomField>
    <fullName>business_units__c</fullName>
    <formula>LEFT(TRIM(business_unit_long__c) , LEN(TRIM(business_unit_long__c)) - 1)</formula>
    <label>Business Unit(s)</label>
    <type>Text</type>
</CustomField>