unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <label>Bypass Validation</label>
    <type>DateTime</type>
</CustomField>