unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cable_Manage_QLs_Needing_Approval__c.field-meta.xml
<CustomField>
    <fullName>Cable_Manage_QLs_Needing_Approval__c</fullName>
    <inlineHelpText># of Quote Lines Below Approval Threshold</inlineHelpText>
    <label>Cable Manage QLs Needing Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>