unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cable_Management_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Cable_Management_Quote_Lines__c</fullName>
    <label>Cable Management Quote Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>