unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_Aluminum_Conduit_Fitting__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_Aluminum_Conduit_Fitting__c</fullName>
    <label>Cash Discount (Aluminum Conduit&amp;Fitting)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>