unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_Conduit_Cable_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_Conduit_Cable_Fittings__c</fullName>
    <label>Cash Discount (Conduit &amp; Cable Fittings)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>