unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_ECFC__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_ECFC__c</fullName>
    <label>Cash Discount (ECFC)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>