unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cash_Discount_KON__c.field-meta.xml
<CustomField>
    <fullName>Cash_Discount_KON__c</fullName>
    <description>Calculated cash discounts for KON line items. Check OVERRIDE to manually adjust this charge.</description>
    <inlineHelpText>Calculated cash discounts for KON line items. Check OVERRIDE to manually adjust this charge.</inlineHelpText>
    <label>Cash Discount (KON)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>